Implement the following correction (#13)
- Display number of messages received for application

--- a/box-resources/en/main.html
+++ b/box-resources/en/main.html
@@ -120,6 +120,16 @@ ha.dispInsAppListSchema = function(schema, boxName) {
             var status = data.status;
             var html = '';
             if (status.indexOf('ready') >= 0) {
+                var msgCnt = "";
+                cm.getNotCompMessageCnt(boxName).done(function(data) {
+                    if (data.d.__count > 0) {
+                        msgCnt = data.d.__count;
+                    }
+                }).always(function(data) {
+                    //var html = '<div class="ins-app" align="center"><a class="ins-app-icon" onClick="cm.execApp(\'' + schema + '\', \'' + boxName + '\')" target="_blank"><img src = "' + imageSrc + '" class="ins-app-icon"></a><div class="ins-app-name">' + dispName + '</div></div>';
+                    var html = '<div class="ins-app" align="center"><a class="ins-app-icon" onClick="cm.execApp(\'' + schema + '\', \'' + boxName + '\')" target="_blank"><img src = "' + imageSrc + '" class="ins-app-icon"><span class="badge badgePos">' + msgCnt + '</span></a><div class="ins-app-name">' + dispName + '</div></div>';
+                    $("#dashboard_ins").append(html);
+                });
                 var html = '<div class="ins-app" align="center"><a href="javascript:void(0)" class="ins-app-icon" onClick="cm.execApp(\'' + schema + '\', \'' + boxName + '\')" target="_blank"><img src = "' + imageSrc + '" class="ins-app-icon"></a><div class="ins-app-name">' + dispName + '</div></div>';
                 $("#dashboard_ins").append(html);
             }
