--- a/box-resources-demo/ja/socialgraph.html
+++ b/box-resources-demo/ja/socialgraph.html
@@ -100,8 +100,8 @@
                     
                 </div>
                 <div class="modal-footer">
-                    <button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
-                    <button type="button" class="btn btn-primary" id="b-add-extcelllinkrelation-ok">Assign</button>
+                    <button type="button" class="btn btn-default" data-dismiss="modal">キャンセル</button>
+                    <button type="button" class="btn btn-primary" id="b-add-extcelllinkrelation-ok">割り当て</button>
                 </div>
             </div>
         </div>
