--- a/box-resources/ja/socialgraph.html
+++ b/box-resources/ja/socialgraph.html
@@ -100,31 +100,8 @@
                     
                 </div>
                 <div class="modal-footer">
-                    <button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
-                    <button type="button" class="btn btn-primary" id="b-add-extcelllinkrelation-ok">Assign</button>
-                </div>
-            </div>
-        </div>
-    </div>
-
-    <!-- Confirmation Modal -->
-    <div id="modal-confirmation" class="modal fade" role="dialog">
-        <div class="modal-dialog">
-            <!-- Modal content-->
-            <div class="modal-content">
-                <div class="modal-header">
-                    <button type="button" class="close" data-dismiss="modal">×</button>
-                    <h4 class="modal-title" id="modal-confirmation-title"></h4>
-                </div>
-                <div class="modal-body">
-                     <div id="dvTextConfirmation"></div>
-                </div>
-                <div class="modal-footer">
-                    <button type="button" class="btn btn-default" data-dismiss="modal" id="b-cancel" style="display:none">Cancel</button>
-                    <button type="button" class="btn btn-primary" id="b-del-extcell-ok" style="display:none">Delete</button>
-                    <button type="button" class="btn btn-primary" id="b-del-extcelllinkrole-ok" style="display:none">Delete</button>
-                    <button type="button" class="btn btn-primary" id="b-del-extcelllinkrelation-ok" style="display:none">Delete</button>
-                    
+                    <button type="button" class="btn btn-default" data-dismiss="modal">キャンセル</button>
+                    <button type="button" class="btn btn-primary" id="b-add-extcelllinkrelation-ok">割り当て</button>
                 </div>
             </div>
         </div>
