--- a/box-resources/en/main.html
+++ b/box-resources/en/main.html
@@ -31,11 +31,6 @@ ha = {};
 
 ha.systemApps = [
   {
-    "name": "Messages",
-    "icon": "001lighticons-02full.png",
-    "url": "messages.html",
-    "used": false
-  }, {
     "name": "Social",
     "icon": "003lighticons-03full.png",
     "url": "socialgraph.html",
@@ -43,23 +38,8 @@ ha.systemApps = [
   }, {
     "name": "App Market",
     "icon": "001lighticons-31full.png",
-    "url": "",
-    "used": false
-  }, {
-    "name": "Data Viewer",
-    "icon": "001lighticons-35full.png",
-    "url": "dataviewer.html",
-    "used": false
-  }, {
-    "name": "Devices",
-    "icon": "001lighticons-10full.png",
-    "url": "devices.html",
-    "used": false
-  }, {
-    "name": "Questionnaire",
-    "icon": "001lighticons-73full.png",
-    "url": "",
-    "used": false
+    "url": "applicationmarket.html",
+    "used": true
   }
 ];
 
