Implement the following correction  - "Account" in Japanese  - "Social" in Japanese  - "App Market" in Japanese

--- a/box-resources-demo/ja/main.html
+++ b/box-resources-demo/ja/main.html
@@ -35,12 +35,12 @@ ha = {};
 
 ha.systemApps = [
   {
-    "name": "Social",
+    "name": "コミュニティ",
     "icon": "003lighticons-03full.png",
     "url": "socialgraph.html",
     "used": true
   }, {
-    "name": "App Market",
+    "name": "App マーケット",
     "icon": "001lighticons-31full.png",
     "url": "applicationmarket.html",
     "used": true
