Application of login screen design.

--- a/box-resources/ja/login.html
+++ b/box-resources/ja/login.html
@@ -52,7 +52,7 @@
                 </div>
                 <div>
                     <button class="login_btn_g" id="gLogin">
-                        <img style="width: 24px;height: 24px;margin-right: 8px;background: white;border-radius: 5px;" src="../../appcell-resources/icons/parts_ico_google.png">
+                        <img style="width: 24px;height: 24px;margin-right: 8px;background: white;border-radius: 5px;" src="https://demo.personium.io/HomeApplication/__/icons/parts_ico_google.png">
                         Googleアカウントでログイン
                     </button>
                 </div>
