--- a/box-resources-demo/en/login.html
+++ b/box-resources-demo/en/login.html
@@ -1,160 +1,152 @@
 <!DOCTYPE html>
 <html lang="en">
-	<head>
-		<meta charset="utf-8">
-		<meta http-equiv="X-UA-Compatible" content="IE=edge">
-		<meta name="viewport" content="width=device-width, initial-scale=1">
-		<title>Personium Cell</title>
-		<link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap.min.css" rel="stylesheet">
-		<!--[if lt IE 9]>
-			<script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
-			<script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
-		<![endif]-->
-		<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
-		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/js/bootstrap.min.js"></script>
-                <!--<script src="https://demo.personium.io/HomeApplication/__/js/login.js"></script>
-                <script src="https://demo.personium.io/HomeApplication/__/js/message_en.js"></script>
-                <script src="https://demo.personium.io/HomeApplication/__/js/demo.js"></script>-->
-                <script src="../../appcell-resources/js/login.js"></script>
-                <script src="../../appcell-resources/js/message_en.js"></script>
-                <script src="../../appcell-resources/js/demo.js"></script>
-		<link href='https://fonts.googleapis.com/css?family=Raleway:400,200' rel='stylesheet' type='text/css'>
-                <!--<link href='https://demo.personium.io/HomeApplication/__/css/common.css' rel='stylesheet' type='text/css'>
-                <link href='https://demo.personium.io/HomeApplication/__/css/login.css' rel='stylesheet' type='text/css'>
-                <link href='https://demo.personium.io/HomeApplication/__/css/demo.css' rel='stylesheet' type='text/css'>-->
-                <link href='../../appcell-resources/css/common.css' rel='stylesheet' type='text/css'>
-                <link href='../../appcell-resources/css/login.css' rel='stylesheet' type='text/css'>
-                <link href='../../appcell-resources/css/demo.css' rel='stylesheet' type='text/css'>
+    <head>
+        <meta charset="utf-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <title>Personium Cell</title>
+        <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap.min.css" rel="stylesheet">
+        <!--[if lt IE 9]>
+            <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
+            <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
+        <![endif]-->
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/js/bootstrap.min.js"></script>
+        <!--
+        <script src="https://demo.personium.io/HomeApplication/__/js/login.js"></script>
+        <script src="https://demo.personium.io/HomeApplication/__/js/message_en.js"></script>
+        <script src="https://demo.personium.io/HomeApplication/__/js/demo.js"></script>
+        -->
+        <script src="../../appcell-resources/js/login.js"></script>
+        <script src="../../appcell-resources/js/message_en.js"></script>
+        <script src="../../appcell-resources/js/demo.js"></script>
+        <link href='https://fonts.googleapis.com/css?family=Raleway:400,200' rel='stylesheet' type='text/css'>
+        <!--
+        <link href='https://demo.personium.io/HomeApplication/__/css/common.css' rel='stylesheet' type='text/css'>
+        <link href='https://demo.personium.io/HomeApplication/__/css/login.css' rel='stylesheet' type='text/css'>
+        <link href='https://demo.personium.io/HomeApplication/__/css/demo.css' rel='stylesheet' type='text/css'>
+        -->
+        <link href='../../appcell-resources/css/common.css' rel='stylesheet' type='text/css'>
+        <link href='../../appcell-resources/css/login.css' rel='stylesheet' type='text/css'>
+        <link href='../../appcell-resources/css/demo.css' rel='stylesheet' type='text/css'>
 <script type="text/javascript">
     $(document).ready(function() {
         demo.initTarget();
     });
 </script>
-	</head>
-<body>
-    <div class="main_box">
-	<div class="col-md-12 col-xs-12" align="center">
+    </head>
+    <body>
+        <section class="login-section">
+            <h1 id="pdsLogo">Personium</h1>
             <div>
-                <h1 id="pdsRogo">Personium</h1>
-            </div>
-            <div class="outter">
                 <img id="imProfile" src="" class="image-circle-large"/>
             </div>
-            <h1 id="tProfileDisplayName">Guest</h1>
-	</div>
-        
-        <div class="col-md-12 col-xs-12 login_control">
-            <div class="control">
-                <input id="iAccountName" type="text" class="form-control" placeholder="Please enter the account name." value=""/>
-            </div>
-            
-            <div class="control">
-                <input id="iAccountPw" type="password" class="form-control" placeholder="Please enter a password." value=""/>
-            </div>
-            <div align="center">
-                 <button class="login_btn" id="bLogin">LOGIN</button>
-            </div>
-            <div class="new_user">
-            </div>
-            <div class="forgot_pass">
-            </div>
-            <div align="center">
-                <button class="login_btn_g" id="gLogin">Sign in with your Google Account</button>
-            </div>
-        </div>
-        <div class="error_box">
-            <div align="center" id="error_area" class="error_area">
-                <table class="msg_area">
-                    <tr>
-                        <td class="image-error">
-                            <img id="imError" class="image-error" src="https://demo.personium.io/HomeApplication/__/icons/ico_error.png"/>
-                        </td>
-                        <td align="left">
-                            <label id="error_msg" class="error_msg">Error</label>
-                        </td>
-                    </tr>
-                </table>
-            </div>
-        </div>
-    </div>
+            <div id="tProfileDisplayName" class="sizeHeadLine">Guest</div>
 
-    <div id="modal-input-cell" class="modal fade" role="dialog" data-backdrop="static">
-        <div class="modal-dialog">
-            <div class="modal-content">
-                <div class="modal-header login-header">
-                    <h4 class="modal-title">Login cell input</h4>
+            <div class="login-form-controls">
+                <div>
+                    <input id="iAccountName" type="text" placeholder="Please enter the account name." value=""/>
                 </div>
-                <div class="modal-body">
-                    <form>
-                        <div class="form-group">
-                            <div id="dvCellUrl">Cell URL</div>
-                            <input type="text" class="fontBlack" id="pCellUrl">
-                            <span id="errorCellUrl" style="color:red"></span>
-                        </div>
-                    </form>
+
+                <div>
+                    <input id="iAccountPw" type="password" placeholder="Please enter a password." value=""/>
                 </div>
-                <div class="modal-footer">
-                    <button type="button" class="btn btn-primary" id="b-input-cell-ok">OK</button>
+                <div>
+                    <button class="login_btn round-btn" id="bLogin">LOGIN</button>
+                </div>
+                <div>
+                    <button class="login_btn_g" id="gLogin">
+                        <img style="width: 24px;height: 24px;margin-right: 8px;background: white;border-radius: 5px;" src="https://demo.personium.io/HomeApplication/__/icons/parts_ico_google.png">
+                        Sign in with your Google Account
+                    </button>
+                </div>
+            </div>
+            <div class="error_box">
+                <div id="error_area" class="error_area">
+                    <div class="error_content">
+                        <img id="imError" class="image-error" src="https://demo.personium.io/HomeApplication/__/icons/ico_error.png"/>
+                        <span id="error_msg" class="error_msg">Error</span>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <div id="modal-input-cell" class="modal fade" role="dialog" data-backdrop="static">
+            <div class="modal-dialog">
+                <div class="modal-content">
+                    <div class="modal-header login-header">
+                        <h4 class="modal-title">Login cell input</h4>
+                    </div>
+                    <div class="modal-body">
+                        <form>
+                            <div class="form-group">
+                                <div id="dvCellUrl">Cell URL</div>
+                                <input type="text" class="fontBlack" id="pCellUrl">
+                                <span id="errorCellUrl" style="color:red"></span>
+                            </div>
+                        </form>
+                    </div>
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-primary" id="b-input-cell-ok">OK</button>
+                    </div>
                 </div>
             </div>
         </div>
-    </div>
 
-    <div id="modal-demo-start" class="modal fade" role="dialog" data-backdrop="static">
-        <div class="modal-dialog">
-            <div class="modal-content">
-                <div class="modal-header login-header">
-                    <h4 class="modal-title">Welcome to the demo version home application</h4>
-                </div>
-                <div class="modal-body fontBlack">
-                    I will explain how to use the home application in the demo version. <br>
-                    Let's first enter the cell URL to log in. <br>
-                    This time the demo cell URL: <br>
-                    Https://demo.personium.io/democell/ <br>
-                    I will try logging in to.
-                </div>
-                <div class="modal-footer">
-                    <button type="button" class="btn btn-primary" id="b-demo-start-ok">OK</button>
+        <div id="modal-demo-start" class="modal fade" role="dialog" data-backdrop="static">
+            <div class="modal-dialog">
+                <div class="modal-content">
+                    <div class="modal-header login-header">
+                        <h4 class="modal-title">Welcome to the demo version home application</h4>
+                    </div>
+                    <div class="modal-body fontBlack">
+                        I will explain how to use the home application in the demo version. <br>
+                        Let's first enter the cell URL to log in. <br>
+                        This time the demo cell URL: <br>
+                        Https://demo.personium.io/democell/ <br>
+                        I will try logging in to.
+                    </div>
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-primary" id="b-demo-start-ok">OK</button>
+                    </div>
                 </div>
             </div>
         </div>
-    </div>
 
-    <div id="modal-celllogin-start" class="modal fade" role="dialog" data-backdrop="static">
-        <div class="modal-dialog">
-            <div class="modal-content">
-                <div class="modal-header login-header">
-                    <h4 class="modal-title">Selecting the login target cell is completed</h4>
-                </div>
-                <div class="modal-body fontBlack">
-                    You can now access the cell you are logging in to. <br>
-                     Let's login to the cell. <br>
-                     Login ID to this cell and PASS<br>
-                     ID: me <br>
-                     PW: democell <br>
-                </div>
-                <div class="modal-footer">
-                    <button type="button" class="btn btn-primary" id="b-celllogin-start-ok">OK</button>
+        <div id="modal-celllogin-start" class="modal fade" role="dialog" data-backdrop="static">
+            <div class="modal-dialog">
+                <div class="modal-content">
+                    <div class="modal-header login-header">
+                        <h4 class="modal-title">Selecting the login target cell is completed</h4>
+                    </div>
+                    <div class="modal-body fontBlack">
+                        You can now access the cell you are logging in to. <br>
+                         Let's login to the cell. <br>
+                         Login ID to this cell and PASS<br>
+                         ID: me <br>
+                         PW: democell <br>
+                    </div>
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-primary" id="b-celllogin-start-ok">OK</button>
+                    </div>
                 </div>
             </div>
         </div>
-    </div>
 
-    <div id="modal-demoend-start" class="modal fade" role="dialog" data-backdrop="static">
-        <div class="modal-dialog">
-            <div class="modal-content">
-                <div class="modal-header login-header">
-                    <h4 class="modal-title">Thank you for your hard work.</h4>
-                </div>
-                <div class="modal-body fontBlack">
-                    This concludes the description of the demo home application.
-                </div>
-                <div class="modal-footer">
-                    <button type="button" class="btn btn-primary" id="b-demoend-start-ok">OK</button>
+        <div id="modal-demoend-start" class="modal fade" role="dialog" data-backdrop="static">
+            <div class="modal-dialog">
+                <div class="modal-content">
+                    <div class="modal-header login-header">
+                        <h4 class="modal-title">Thank you for your hard work.</h4>
+                    </div>
+                    <div class="modal-body fontBlack">
+                        This concludes the description of the demo home application.
+                    </div>
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-primary" id="b-demoend-start-ok">OK</button>
+                    </div>
                 </div>
             </div>
         </div>
-    </div>
-</body>
-
+    </body>
 </html>
