--- a/box-resources-demo/ja/login.html
+++ b/box-resources-demo/ja/login.html
@@ -1,161 +1,153 @@
 <!DOCTYPE html>
 <html lang="ja">
-	<head>
-		<meta charset="utf-8">
-		<meta http-equiv="X-UA-Compatible" content="IE=edge">
-		<meta name="viewport" content="width=device-width, initial-scale=1">
-		<title>Personium Cell</title>
-		<link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap.min.css" rel="stylesheet">
-		<!--[if lt IE 9]>
-			<script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
-			<script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
-		<![endif]-->
-		<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
-		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/js/bootstrap.min.js"></script>
-                <!--<script src="https://demo.personium.io/HomeApplication/__/js/login.js"></script>
-                <script src="https://demo.personium.io/HomeApplication/__/js/message_ja.js"></script>
-                <script src="https://demo.personium.io/HomeApplication/__/js/demo.js"></script>-->
-                <script src="../../appcell-resources/js/login.js"></script>
-                <script src="../../appcell-resources/js/message_ja.js"></script>
-                <script src="../../appcell-resources/js/demo.js"></script>
-		<link href='https://fonts.googleapis.com/css?family=Raleway:400,200' rel='stylesheet' type='text/css'>
-                <!--<link href='https://demo.personium.io/HomeApplication/__/css/common.css' rel='stylesheet' type='text/css'>
-                <link href='https://demo.personium.io/HomeApplication/__/css/login.css' rel='stylesheet' type='text/css'>
-                <link href='https://demo.personium.io/HomeApplication/__/css/demo.css' rel='stylesheet' type='text/css'>-->
-                <link href='../../appcell-resources/css/common.css' rel='stylesheet' type='text/css'>
-                <link href='../../appcell-resources/css/login.css' rel='stylesheet' type='text/css'>
-                <link href='../../appcell-resources/css/demo.css' rel='stylesheet' type='text/css'>
+    <head>
+        <meta charset="utf-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <title>Personium Cell</title>
+        <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap.min.css" rel="stylesheet">
+        <!--[if lt IE 9]>
+            <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
+            <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
+        <![endif]-->
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/js/bootstrap.min.js"></script>
+        <!--
+        <script src="https://demo.personium.io/HomeApplication/__/js/login.js"></script>
+        <script src="https://demo.personium.io/HomeApplication/__/js/message_ja.js"></script>
+        <script src="https://demo.personium.io/HomeApplication/__/js/demo.js"></script>
+        -->
+        <script src="../../appcell-resources/js/login.js"></script>
+        <script src="../../appcell-resources/js/message_ja.js"></script>
+        <script src="../../appcell-resources/js/demo.js"></script>
+        <link href='https://fonts.googleapis.com/css?family=Raleway:400,200' rel='stylesheet' type='text/css'>
+        <!--
+        <link href='https://demo.personium.io/HomeApplication/__/css/common.css' rel='stylesheet' type='text/css'>
+        <link href='https://demo.personium.io/HomeApplication/__/css/login.css' rel='stylesheet' type='text/css'>
+        <link href='https://demo.personium.io/HomeApplication/__/css/demo.css' rel='stylesheet' type='text/css'>
+        -->
+        <link href='../../appcell-resources/css/common.css' rel='stylesheet' type='text/css'>
+        <link href='../../appcell-resources/css/login.css' rel='stylesheet' type='text/css'>
+        <link href='../../appcell-resources/css/demo.css' rel='stylesheet' type='text/css'>
 <script type="text/javascript">
     $(document).ready(function() {
         demo.initTarget();
     });
 </script>
-	</head>
-<body>
-    <div class="main_box">
-	<div class="col-md-12 col-xs-12" align="center">
+    </head>
+    <body>
+        <section class="login-section">
+            <h1 id="pdsLogo">Personium</h1>
             <div>
-                <h1 id="pdsRogo">Personium</h1>
-            </div>
-            <div class="outter">
                 <img id="imProfile" src="" class="image-circle-large"/>
             </div>
-            <h1 id="tProfileDisplayName">Guest</h1>
-	</div>
-        
-        <div class="col-md-12 col-xs-12 login_control">
-            <div class="control">
-                <input id="iAccountName" type="text" class="form-control" placeholder="アカウント名を入力して下さい。" value=""/>
-            </div>
-            
-            <div class="control">
-                <input id="iAccountPw" type="password" class="form-control" placeholder="パスワードを入力して下さい。" value=""/>
-            </div>
-            <div align="center">
-                 <button class="login_btn" id="bLogin">ログイン</button>
-            </div>
-            <div class="new_user">
-            </div>
-            <div class="forgot_pass">
-            </div>
-            <div align="center">
-                <button class="login_btn_g" id="gLogin">Googleアカウントでログイン</button>
-            </div>
-        </div>
-        <div class="error_box">
-            <div align="center" id="error_area" class="error_area">
-                <table class="msg_area">
-                    <tr>
-                        <td class="image-error">
-                            <img id="imError" class="image-error" src="https://demo.personium.io/HomeApplication/__/icons/ico_error.png"/>
-                        </td>
-                        <td align="left">
-                            <label id="error_msg" class="error_msg">エラー</label>
-                        </td>
-                    </tr>
-                </table>
-            </div>
-        </div>
-    </div>
+            <div id="tProfileDisplayName" class="sizeHeadLine">Guest</div>
 
-    <div id="modal-input-cell" class="modal fade" role="dialog" data-backdrop="static">
-        <div class="modal-dialog">
-            <div class="modal-content">
-                <div class="modal-header login-header">
-                    <h4 class="modal-title">ログインセル入力</h4>
+            <div class="login-form-controls">
+                <div>
+                    <input id="iAccountName" type="text" placeholder="アカウント名を入力して下さい。" value=""/>
                 </div>
-                <div class="modal-body fontBlack">
-                    <form>
-                        <div class="form-group">
-                            <div id="dvCellUrl">Cell URL</div>
-                            <input type="text" class="fontBlack" id="pCellUrl" value="https://demo.personium.io/democell/">
-                            <span id="errorCellUrl" style="color:red"></span>
-                        </div>
-                    </form>
+
+                <div>
+                    <input id="iAccountPw" type="password" placeholder="パスワードを入力して下さい。" value=""/>
                 </div>
-                <div class="modal-footer">
-                    <button type="button" class="btn btn-primary" id="b-input-cell-ok">OK</button>
+                <div>
+                    <button class="login_btn round-btn" id="bLogin">ログイン</button>
+                </div>
+                <div>
+                    <button class="login_btn_g" id="gLogin">
+                        <img style="width: 24px;height: 24px;margin-right: 8px;background: white;border-radius: 5px;" src="https://demo.personium.io/HomeApplication/__/icons/parts_ico_google.png">
+                        Googleアカウントでログイン
+                    </button>
+                </div>
+            </div>
+            <div class="error_box">
+                <div id="error_area" class="error_area">
+                    <div class="error_content">
+                        <img id="imError" class="image-error" src="https://demo.personium.io/HomeApplication/__/icons/ico_error.png"/>
+                        <span id="error_msg" class="error_msg">エラー</span>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <div id="modal-input-cell" class="modal fade" role="dialog" data-backdrop="static">
+            <div class="modal-dialog">
+                <div class="modal-content">
+                    <div class="modal-header login-header">
+                        <h4 class="modal-title">ログインセル入力</h4>
+                    </div>
+                    <div class="modal-body">
+                        <form>
+                            <div class="form-group">
+                                <div id="dvCellUrl">Cell URL</div>
+                                <input type="text" class="fontBlack" id="pCellUrl">
+                                <span id="errorCellUrl" style="color:red"></span>
+                            </div>
+                        </form>
+                    </div>
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-primary" id="b-input-cell-ok">OK</button>
+                    </div>
                 </div>
             </div>
         </div>
-    </div>
 
-    <div id="modal-demo-start" class="modal fade" role="dialog" data-backdrop="static">
-        <div class="modal-dialog">
-            <div class="modal-content">
-                <div class="modal-header login-header">
-                    <h4 class="modal-title">デモ版ホームアプリへようこそ</h4>
-                </div>
-                <div class="modal-body fontBlack">
-                    デモ版ではホームアプリの使い方についてご説明致します。<br>
-                    まずはログインするセルURLを入力しましょう。<br>
-                    今回はデモ用のセルURL:<br>
-                    https://demo.personium.io/democell/<br>
-                    にログインしてみます。
-                </div>
-                <div class="modal-footer">
-                    <button type="button" class="btn btn-primary" id="b-demo-start-ok">OK</button>
+        <div id="modal-demo-start" class="modal fade" role="dialog" data-backdrop="static">
+            <div class="modal-dialog">
+                <div class="modal-content">
+                    <div class="modal-header login-header">
+                        <h4 class="modal-title">デモ版ホームアプリへようこそ</h4>
+                    </div>
+                    <div class="modal-body fontBlack">
+                        デモ版ではホームアプリの使い方についてご説明致します。<br>
+                        まずはログインするセルURLを入力しましょう。<br>
+                        今回はデモ用のセルURL:<br>
+                        https://demo.personium.io/democell/<br>
+                        にログインしてみます。
+                    </div>
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-primary" id="b-demo-start-ok">OK</button>
+                    </div>
                 </div>
             </div>
         </div>
-    </div>
 
-    <div id="modal-celllogin-start" class="modal fade" role="dialog" data-backdrop="static">
-        <div class="modal-dialog">
-            <div class="modal-content">
-                <div class="modal-header login-header">
-                    <h4 class="modal-title">ログイン対象セルの選択完了</h4>
-                </div>
-                <div class="modal-body fontBlack">
-                    これでログイン対象のセルへアクセス出来ました。<br>
-                    ではセルへログインしてみましょう。<br>
-                    今回のセルへのログインID及びPASSは<br>
-                    ID:me<br>
-                    PW:democell<br>
-                    になります。
-                </div>
-                <div class="modal-footer">
-                    <button type="button" class="btn btn-primary" id="b-celllogin-start-ok">OK</button>
+        <div id="modal-celllogin-start" class="modal fade" role="dialog" data-backdrop="static">
+            <div class="modal-dialog">
+                <div class="modal-content">
+                    <div class="modal-header login-header">
+                        <h4 class="modal-title">ログイン対象セルの選択完了</h4>
+                    </div>
+                    <div class="modal-body fontBlack">
+                        これでログイン対象のセルへアクセス出来ました。<br>
+                        ではセルへログインしてみましょう。<br>
+                        今回のセルへのログインID及びPASSは<br>
+                        ID:me<br>
+                        PW:democell<br>
+                        になります。
+                    </div>
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-primary" id="b-celllogin-start-ok">OK</button>
+                    </div>
                 </div>
             </div>
         </div>
-    </div>
 
-    <div id="modal-demoend-start" class="modal fade" role="dialog" data-backdrop="static">
-        <div class="modal-dialog">
-            <div class="modal-content">
-                <div class="modal-header login-header">
-                    <h4 class="modal-title">お疲れ様でした。</h4>
-                </div>
-                <div class="modal-body fontBlack">
-                    以上でデモホームアプリの説明を終了します。
-                </div>
-                <div class="modal-footer">
-                    <button type="button" class="btn btn-primary" id="b-demoend-start-ok">OK</button>
+        <div id="modal-demoend-start" class="modal fade" role="dialog" data-backdrop="static">
+            <div class="modal-dialog">
+                <div class="modal-content">
+                    <div class="modal-header login-header">
+                        <h4 class="modal-title">お疲れ様でした。</h4>
+                    </div>
+                    <div class="modal-body fontBlack">
+                        以上でデモホームアプリの説明を終了します。
+                    </div>
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-primary" id="b-demoend-start-ok">OK</button>
+                    </div>
                 </div>
             </div>
         </div>
-    </div>
-</body>
-
+    </body>
 </html>
