--- a/box-resources/ja/applicationmarket.html
+++ b/box-resources/ja/applicationmarket.html
@@ -26,6 +26,11 @@
     <link href='../../appcell-resources/css/settings.css' rel='stylesheet' type='text/css'>
     <link href='../../appcell-resources/css/applicationmarket.css' rel='stylesheet' type='text/css'>
     <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-T8Gy5hrqNKT+hzMclPo118YTQO6cYprQmhrYwIiQ/3axmI1hQomh7Ud2hPOy8SP1" crossorigin="anonymous">
+<script type="text/javascript">
+    $(document).ready(function() {
+        am.initAppMarket();
+    });
+</script>
   </head>
   <body>
     <div class="container-fluid display-table">
