Introduced i18next as multilingual support for home applications

--- a/box-resources/login.html
+++ b/box-resources/login.html
@@ -12,27 +12,23 @@
         <![endif]-->
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/js/bootstrap.min.js"></script>
-		<script src="../../appcell-resources/js/utils.js"></script>
-        <!--
-        <script src="https://demo.personium.io/HomeApplication/__/js/login.js"></script>
-        <script src="https://demo.personium.io/HomeApplication/__/js/message_ja.js"></script>
-        -->
-        <script src="../../appcell-resources/js/login.js"></script>
-        <script src="../../appcell-resources/js/message_ja.js"></script>
+        <script src="../appcell-resources/js/i18next-1.6.3.js"></script>
+        <script src="../appcell-resources/js/load.i18n.js"></script>
+        <script src="../appcell-resources/js/utils.js"></script>
+        <script src="../appcell-resources/js/login.js"></script>
         <link href='https://fonts.googleapis.com/css?family=Raleway:400,200' rel='stylesheet' type='text/css'>
-        <!--
-        <link href='https://demo.personium.io/HomeApplication/__/css/common.css' rel='stylesheet' type='text/css'>
-        <link href='https://demo.personium.io/HomeApplication/__/css/login.css' rel='stylesheet' type='text/css'>
-        -->
-        <link href='../../appcell-resources/css/common.css' rel='stylesheet' type='text/css'>
-        <link href='../../appcell-resources/css/login.css' rel='stylesheet' type='text/css'>
+        <link href='../appcell-resources/css/common.css' rel='stylesheet' type='text/css'>
+        <link href='../appcell-resources/css/login.css' rel='stylesheet' type='text/css'>
 <script type="text/javascript">
-    $(document).ready(function() {
+    $(window).load(function() {
         lg.initTarget();
+
+        $("#iAccountName").attr("placeholder", tran.msg("accountNamePlaceHolder"));
+        $("#iAccountPw").attr("placeholder", tran.msg("accountPassPlaceHolder"));
     });
 </script>
     </head>
-    <body>
+    <body id="translate">
         <section class="login-section">
             <h1 id="pdsLogo">Personium</h1>
             <div>
@@ -42,19 +38,19 @@
 
             <div class="login-form-controls">
                 <div>
-                    <input id="iAccountName" type="text" placeholder="アカウント名を入力して下さい。" value=""/>
+                    <input id="iAccountName" type="text" placeholder="Please enter the account name." value=""/>
                 </div>
 
                 <div>
-                    <input id="iAccountPw" type="password" placeholder="パスワードを入力して下さい。" value=""/>
+                    <input id="iAccountPw" type="password" placeholder="Please enter a password." value=""/>
                 </div>
                 <div>
-                    <button class="login_btn round-btn" id="bLogin">ログイン</button>
+                    <button class="login_btn round-btn" id="bLogin"><span data-i18n="Login">LOGIN</span></button>
                 </div>
                 <div>
                     <button class="login_btn_g" id="gLogin">
                         <img style="width: 24px;height: 24px;margin-right: 8px;background: white;border-radius: 5px;" src="https://demo.personium.io/HomeApplication/__/icons/parts_ico_google.png">
-                        Googleアカウントでログイン
+                        <span data-i18n="loginGoogleAccount">Sign in with your Google Account</span>
                     </button>
                 </div>
             </div>
@@ -62,7 +58,7 @@
                 <div id="error_area" class="error_area">
                     <div class="error_content">
                         <img id="imError" class="image-error" src="https://demo.personium.io/HomeApplication/__/icons/ico_error.png"/>
-                        <span id="error_msg" class="error_msg">エラー</span>
+                        <span id="error_msg" class="error_msg" data-i18n="Error">エラー</span>
                     </div>
                 </div>
             </div>
@@ -72,7 +68,7 @@
             <div class="modal-dialog">
                 <div class="modal-content">
                     <div class="modal-header login-header">
-                        <h4 class="modal-title">ログインセル入力</h4>
+                        <h4 class="modal-title" data-i18n="inputLoginCellTitle">ログインセル入力</h4>
                     </div>
                     <div class="modal-body">
                         <form>
