--- a/box-resources/socialgraph.html
+++ b/box-resources/socialgraph.html
@@ -12,26 +12,19 @@
         <![endif]-->
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/js/bootstrap.min.js"></script>
-        <!--
-        <script src="https://demo.personium.io/HomeApplication/__/js/common.js"></script>
-        <script src="https://demo.personium.io/HomeApplication/__/js/message_ja.js"></script>
-        <script src="https://demo.personium.io/HomeApplication/__/js/socialgraph.js"></script>
-        -->
-        <script src="../../appcell-resources/js/common.js"></script>
-        <script src="../../appcell-resources/js/message_ja.js"></script>
-        <script src="../../appcell-resources/js/socialgraph.js"></script>
-        <script src="../../appcell-resources/js/settings.js"></script>
+        <script src="../appcell-resources/js/i18next-1.6.3.js"></script>
+        <script src="../appcell-resources/js/load.i18n.js"></script>
+        <script src="../appcell-resources/js/utils.js"></script>
+        <script src="../appcell-resources/js/common.js"></script>
+        <script src="../appcell-resources/js/socialgraph.js"></script>
+        <script src="../appcell-resources/js/settings.js"></script>
         <link href='https://fonts.googleapis.com/css?family=Raleway:400,200' rel='stylesheet' type='text/css'>
-        <!--
-        <link href='https://demo.personium.io/HomeApplication/__/css/common.css' rel='stylesheet' type='text/css'>
-        <link href='https://demo.personium.io/HomeApplication/__/css/socialgraph.css' rel='stylesheet' type='text/css'>
-        -->
-        <link href='../../appcell-resources/css/common.css' rel='stylesheet' type='text/css'>
-        <link href='../../appcell-resources/css/settings.css' rel='stylesheet' type='text/css'>
-        <link href='../../appcell-resources/css/socialgraph.css' rel='stylesheet' type='text/css'>
+        <link href='../appcell-resources/css/common.css' rel='stylesheet' type='text/css'>
+        <link href='../appcell-resources/css/settings.css' rel='stylesheet' type='text/css'>
+        <link href='../appcell-resources/css/socialgraph.css' rel='stylesheet' type='text/css'>
         <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-T8Gy5hrqNKT+hzMclPo118YTQO6cYprQmhrYwIiQ/3axmI1hQomh7Ud2hPOy8SP1" crossorigin="anonymous">
     </head>
-    <body>
+    <body id="translate">
         <div class="container-fluid display-table">
             <div class="row display-parent-div" id="displayParentDiv">
                 <div class="col-md-12 col-sm-12 display-table-cell v-align">
@@ -69,14 +62,14 @@
                 <div class="modal-content">
                     <div class="modal-header">
                         <button type="button" class="close" data-dismiss="modal">×</button>
-                        <h4 class="modal-title" id="header-public">公開BOX</h4>
+                        <h4 class="modal-title" id="header-public" data-i18n="PublicBOX">Public BOX</h4>
                     </div>
                     <div class="modal-body">
                         <div id="dvExtCellPublicBoxList" style="margin-bottom: 10px;">
                         </div>
                     </div>
                     <div class="modal-footer">
-                        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                        <button type="button" class="btn btn-default" data-dismiss="modal"><span data-i18n="Close">Close</span></button>
                     </div>
                 </div>
             </div>
@@ -89,20 +82,20 @@
                 <div class="modal-content">
                     <div class="modal-header">
                         <button type="button" class="close" data-dismiss="modal">×</button>
-                        <h4 class="modal-title" id="header-role">リレーション割り当て</h4>
+                        <h4 class="modal-title" id="header-role" data-i18n="AssigningRelation">Assigning Relation</h4>
                     </div>
                     <div class="modal-body">
-                        <div id="dvAddExtCellLinkRelation">割り当てる外部セルを選択して下さい。</div>
+                        <div id="dvAddExtCellLinkRelation"><span data-i18n="selectRelationAssign">Select a external cell to assign</span></div>
                         <div id="dvSelectAddExtCellLinkRelation" style="margin-bottom: 10px;">
                           <select class="form-control" name="" id="ddlExtCellLinkRelationList">
-                            <option>Select a relation</option>
+                            <option data-i18n="selectRelation">Select a relation</option>
                           </select>
                         </div>
                         
                     </div>
                     <div class="modal-footer">
-                        <button type="button" class="btn btn-default" data-dismiss="modal">キャンセル</button>
-                        <button type="button" class="btn btn-primary" id="b-add-extcelllinkrelation-ok">割り当て</button>
+                        <button type="button" class="btn btn-default" data-dismiss="modal"><span data-i18n="Cancel">Cancel</span></button>
+                        <button type="button" class="btn btn-primary" id="b-add-extcelllinkrelation-ok"><span data-i18n="Assign">Assign</span></button>
                     </div>
                 </div>
             </div>
