--- a/box-resources/applicationmarket.html
+++ b/box-resources/applicationmarket.html
@@ -12,22 +12,18 @@
     <![endif]-->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/js/bootstrap.min.js"></script>
-    <!--<script src="https://demo.personium.io/HomeApplication/__/js/common.js"></script>
-    <script src="https://demo.personium.io/HomeApplication/__/js/message_ja.js"></script>
-    <script src="https://demo.personium.io/HomeApplication/__/js/applicationmarket.js"></script>-->
-    <script src="../../appcell-resources/js/common.js"></script>
-    <script src="../../appcell-resources/js/message_ja.js"></script>
-    <script src="../../appcell-resources/js/applicationmarket.js"></script>
-    <script src="../../appcell-resources/js/settings.js"></script>
+    <script src="../appcell-resources/js/i18next-1.6.3.js"></script>
+    <script src="../appcell-resources/js/load.i18n.js"></script>
+    <script src="../appcell-resources/js/common.js"></script>
+    <script src="../appcell-resources/js/applicationmarket.js"></script>
+    <script src="../appcell-resources/js/settings.js"></script>
     <link href='https://fonts.googleapis.com/css?family=Raleway:400,200' rel='stylesheet' type='text/css'>
-    <!--<link href='https://demo.personium.io/HomeApplication/__/css/common.css' rel='stylesheet' type='text/css'>
-    <link href='https://demo.personium.io/HomeApplication/__/css/applicationmarket.css' rel='stylesheet' type='text/css'>-->
-    <link href='../../appcell-resources/css/common.css' rel='stylesheet' type='text/css'>
-    <link href='../../appcell-resources/css/settings.css' rel='stylesheet' type='text/css'>
-    <link href='../../appcell-resources/css/applicationmarket.css' rel='stylesheet' type='text/css'>
+    <link href='../appcell-resources/css/common.css' rel='stylesheet' type='text/css'>
+    <link href='../appcell-resources/css/settings.css' rel='stylesheet' type='text/css'>
+    <link href='../appcell-resources/css/applicationmarket.css' rel='stylesheet' type='text/css'>
     <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-T8Gy5hrqNKT+hzMclPo118YTQO6cYprQmhrYwIiQ/3axmI1hQomh7Ud2hPOy8SP1" crossorigin="anonymous">
 <script type="text/javascript">
-    $(document).ready(function() {
+    $(window).load(function() {
         am.initAppMarket();
     });
 </script>
